--- a/api_connect_test.html
+++ b/api_connect_test.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-      Python sending
-    </title>
+    <title>routing</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   </head>
   <body>
-    <button id="theButton">Post to Python</button>
-    <h3 id = "info"></h3>
+    <div id="wrapper">
+
+      <!-- Header -->
+        <header id="header">
+          <div class="inner">
+
+            <!-- Logo -->
+              <a href="index.html" class="logo">
+                <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+              </a>
+
+          </div>
+        </header>
+      </div>
+
+    <div id="wrapper2">
+      <div id="main">
+        <div class="inner">
+          <header>
+            <h1 id="question_title"></h1>
+            <h3>Lesson</h3>
+            <p>Modulo or Mod Operator, here when we divide 2 numbers, we receive the quotient as the final answer, With Mod operator, we can find the remainder of the whole division like when we divide 5/2 we get 2.5 which is quotient but to get remainder we do 5%2 which is 1</p>
+            <h3>Question</h3>
+            <p>This is a well thought out question about strings in python</p>
+            <button id="theButton" class="button primary fit">a: 3</button>
+            <p></p>
+            <button id="theButton" class="button primary fit">b: 4</button>
+            <p></p>
+            <button id="theButton" class="button primary fit">c: 42</button>
+            <p></p>
+            <button id="theButton" class="button primary fit">d: 5</button>
+            <p></p>
+            <button id="submitButton" class="button fit">Submit Answer</button>
+          </header>
+        </div>
+      </div>
+    </div>
     <!-- Link to the JavaScript file here: -->
     <script src="assets/js/routing.js"></script>
   </body>
