--- a/results.html
+++ b/results.html
@@ -27,8 +27,17 @@
       <div id="main">
         <div class="inner">
           <header>
-           <h1>test</h1>
-            
+            <h1 id="userScore"></h1>
+            <h2 id="userTime"></h2>
+            <h3>Enter your unique username below to be entered into the leader boards</h3>
+            <form>
+                <div class="textarea-wrapper">
+                        <textarea  maxlength="20" name="demo-message" id="demo-message" placeholder="Enter your username" rows="1" style="overflow: hidden; resize: none; height: 69px;"></textarea>
+                </div>
+                <h1></h1>
+                <button class="button primary fit">Submit Username</button>
+            </form>
+
           </header>
         </div>
       </div>
