--- a/results.html
+++ b/results.html
@@ -29,14 +29,14 @@
           <header>
             <h1 id="userScore"></h1>
             <h2 id="userTime"></h2>
-            <h3>Enter your unique username below to be entered into the leader boards</h3>
-            <form>
-                <div class="textarea-wrapper">
-                        <textarea  maxlength="20" name="demo-message" id="demo-message" placeholder="Enter your username" rows="1" style="overflow: hidden; resize: none; height: 69px;"></textarea>
-                </div>
-                <h1></h1>
-                <button class="button primary fit">Submit Username</button>
-            </form>
+            <h3>Enter your unique username below to be entered into the leaderboards</h3>
+     
+            <div class="textarea-wrapper">
+                    <textarea  maxlength="20" name="demo-message" id="TextUsername" placeholder="Enter your username" rows="1" style="overflow: hidden; resize: none; height: 69px;"></textarea>
+            </div>
+            <h1></h1>
+            <button class="button primary fit" onclick="getUsername()">Submit Username</button>
+     
 
           </header>
         </div>
