--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="api_connect_test.html?track=one">API Connect Test</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
+							<li><a href="leaderboard.html">Leaderboard</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
