update index linkedin

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<a href="api_connect_test.html?track=2">
 										<h2>Intro to Python II</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Variables</p>
 										</div>
 									</a>
 								</article>
@@ -94,7 +94,7 @@
 									<a href="api_connect_test.html?track=3">
 										<h2>Intro to Python III</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>String Indexing</p>
 										</div>
 									</a>
 								</article>
@@ -116,7 +116,7 @@
 									<a href="api_connect_test.html?track=5">
 										<h2>Intro to C++ II</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Math in C++</p>
 										</div>
 									</a>
 								</article>
@@ -127,7 +127,7 @@
 									<a href="api_connect_test.html?track=6">
 										<h2>Intro to C++ III</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Loops and if statements</p>
 										</div>
 									</a>
 								</article>
@@ -145,7 +145,7 @@
 									<a href="api_connect_test.html?track=7">
 										<h2>Intermediate Python</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>String Properties</p>
 										</div>
 									</a>
 								</article>
@@ -156,7 +156,7 @@
 									<a href="api_connect_test.html">
 										<h2>Intermediate Python II</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>String Properties Part II</p>
 										</div>
 									</a>
 								</article>
@@ -167,7 +167,7 @@
 									<a href="api_connect_test.html?track=9">
 										<h2>Intermediate Python III</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>If - else statements.</p>
 										</div>
 									</a>
 								</article>
@@ -200,7 +200,7 @@
 									<a href="api_connect_test.html?track=12">
 										<h2>Intermediate C++ III</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>If - else statements.</p>
 										</div>
 									</a>
 								</article>
@@ -212,7 +212,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
+								<h2>Have questions? Contact us!</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -233,19 +233,15 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/orgs/HackMerced2022/repositories" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+                                   
+									<li><a href="#" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="#" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="#" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="#" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									
 								</ul>
 							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
 						</div>
 					</footer>
 
