--- a/leaderboard.html
+++ b/leaderboard.html
@@ -32,9 +32,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="api_connect_test.html?track=one">API Connect Test</a></li>
-                    <li><a href="generic.html">Tempus etiam</a></li>
-                    <li><a href="generic.html">Consequat dolor</a></li>
-                    <li><a href="elements.html">Elements</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
       </div>
