--- a/leaderboard.html
+++ b/leaderboard.html
@@ -16,7 +16,7 @@
 
             <!-- Logo -->
             <a href="index.html" class="logo">
-            <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+            <span class="symbol"><img src="images/logo2.svg" alt=""></span><span class="title">ProgramBase </span>
             </a>
             <!-- Nav -->
             <nav>
