--- a/results.html
+++ b/results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>routing</title>
+    <title>Results</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
             <!-- Logo -->
               <a href="index.html" class="logo">
-                <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+                <span class="symbol"><img src="images/logo2.svg" alt=""></span><span class="title">ProgramBase </span>
               </a>
 
           </div>
